2006-10-06  Andrew MacLeod  <amacleod@redhat.com>
	
	* tree-ssa-coalesce.c (struct coalesce_list_d): Remove present bitmap.
	(version_in_coalesce_list_p): Delete.
	(create_coalesce_list): Don't initialize 'present' bitmap.
	(delete_coalesce_list): Don't free 'present' bitmap.
	(find_coalesce_pair): Don't set 'present' bitmap.
	(create_outofssa_var_map: Don't add abnormal pairs to coalesce list.
	Update copy_used_in bitmap.
	(attempt_coalesce): New.  Split out from coalesce_partitions.
	(coalesce_partitions): Coalesce abnormal edges first, then coalesce 
	list.
	(coalesce_ssa_name): shuffles some orderig around.

2006-10-06  Andrew MacLeod  <amacleod@redhat.com>
	
	* tree-ssa-coalesce.c (ssa_conflicts_test_p): Avoid bit test when able.
	(ssa_conflicts_merge): Be more efficient when possible.

2006-10-05  Andrew MacLeod  <amacleod@redhat.com>

	* tree-ssa-coalesce.c: New.  Split coalescing code from tree-outof-ssa.c
	and tree-ssa-live.[ch].
	* tree-ssa-live.c (partition_view_bitmap): Rename from 
	partition_view_coalesce, and remove references to the coalesce list.
	Move coalescing code to tree-ssa-coalesce.c.  Reduce includes.
	* tree-ssa-live.h: Move coalesce code to tree-ssa-coalesce.c.
	* tree-ssa-ter.c: Reduce number of #includes.
	* tree-outof-ssa.c: Move coalesce code.  Reduce include files.
	* Makefile.in: Add tree-ssa-coalesce.o and adjust include lists.

2006-10-05  Andrew MacLeod  <amacleod@redhat.com>

	* tree-outof-ssa.c (struct ssa_conflicts_d): New.  SSA conflict graph.
	(ssa_conflicts_new): New.  Create an SSA conflict graph.
	(ssa_conflicts_delete): New.  Delete an SSA conflict graph.
	(ssa_conflicts_test_p): New.  Test for conflicts.
	(ssa_conflicts_add_one): New.  Add a single conflict.
	(ssa_conflicts_add): New.  Add a conflict pair.
	(ssa_conflicts_merge): New.  Merge conflicts.
	(live_track_process_def,): Use ssa_conflicts.
	(live_track_clear_conflicts): Rename from live_track_add_conflicts, and
	simply clear the conflicts.